update other paths as well